syntax = 'proto3';
package user;
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

message User {
  string id = 1;
  optional google.protobuf.Timestamp createdAt = 2;
  optional google.protobuf.Timestamp deletedAt = 3;
  optional google.protobuf.Timestamp updatedAt = 4;
  int64 extId = 5;
  string name = 6;
  uint32 freeRequests = 7;
  UserRole role = 8;
  optional string userName = 9;
  optional string subscriptionDate = 10;
}

message HasActiveSubscriptionResponse {
  bool isActive = 1;
}

enum UserRole {
  admin = 0;
  user = 1;
}

message UserRequest {
  int32 extId = 1;
  string name = 2;
  optional string userName = 3;
}

message ExtIdRequest {
  int32 extId = 1;
}

message AddSubscriptionRequest {
  int32 extId = 1;
  string name = 2;
  optional string userName = 3;
  string date = 4;
}

message AddPaidRequest {
  int32 extId = 1;
  int32 requestsNumber = 2;
}

message AddSubscriptionResponse {
  bool success = 1;
  string message = 2;
}